izgled login stranice

--- a/Projekat/app/src/main/res/layout/activity_register.xml
+++ b/Projekat/app/src/main/res/layout/activity_register.xml
@@ -74,7 +74,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You have an account? Login here"
+        android:text="@string/register"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="1dp"
         android:layout_below="@+id/register_btn"
