--- a/Projekat/app/src/main/res/layout/activity_main.xml
+++ b/Projekat/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,27 @@
     android:background="@drawable/orange_gradient_top_down"
     tools:context=".MainActivity">
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="5dp"
-        android:id="@+id/login_email_address"
-        android:hint="email address"
+        android:id="@+id/wifinder"
+        android:layout_marginLeft="160dp"
+        android:layout_marginRight="140dp"
+        android:layout_marginBottom="50dp"
+        android:text="@string/wifinder"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:layout_below="@+id/login_image"/>
+
+    <ImageView
+        android:layout_width="200px"
+        android:layout_height="200px"
+        android:layout_marginLeft="160dp"
+        android:layout_marginRight="150dp"
+        android:layout_marginBottom="0dp"
+        android:id="@+id/login_image"
+        android:src="@drawable/ic_outline_wifi_24"
+        android:layout_marginTop="30dp"
         />
 
     <EditText
@@ -23,8 +36,19 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="5dp"
+        android:id="@+id/login_email_address"
+        android:hint="@string/email"
+        android:layout_below="@+id/wifinder"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/login_password"
-        android:hint="password"
+        android:hint="@string/password"
         android:layout_below="@+id/login_email_address"
         />
 
@@ -49,10 +73,10 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="5dp"
         android:id="@+id/login_gotoregistration_textview"
-        android:text="You don't have account? Register here"/>
+        android:text="@string/login"/>
 
 
 </RelativeLayout>
