--- a/Projekat/app/src/main/res/layout/activity_main.xml
+++ b/Projekat/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,10 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/wifinder"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="160dp"
-        android:layout_marginRight="140dp"
         android:layout_marginBottom="50dp"
         android:text="@string/wifinder"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -24,8 +22,6 @@
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="160dp"
-        android:layout_marginRight="150dp"
         android:layout_marginBottom="0dp"
         android:id="@+id/login_image"
         android:src="@drawable/ic_outline_wifi_24"
