--- a/Projekat/app/src/main/res/layout/activity_rang_list.xml
+++ b/Projekat/app/src/main/res/layout/activity_rang_list.xml
@@ -23,6 +23,7 @@
             android:layout_centerHorizontal="true"
             android:id="@+id/rangList_textView"
             android:textAlignment="center"
+            android:textStyle="bold"
             android:textSize="30dp"
             android:text="Rang list"/>
 
