--- a/Projekat/app/src/main/res/layout/activity_users_profile.xml
+++ b/Projekat/app/src/main/res/layout/activity_users_profile.xml
@@ -1,9 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/orange_gradient_top_down"
     tools:context=".UsersProfileActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:id="@+id/usersProfile_usersProfileImage_imageView"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="7dp"
+        android:id="@+id/usersProfile_usersUsername_textView"
+        android:textStyle="bold"
+        android:layout_below="@+id/usersProfile_usersProfileImage_imageView"
+        android:textSize="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/usersProfile_usersUsername_textView"
+        android:id="@+id/usersProfile_usersNumberOfTokens_textView"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginLeft="30dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/usersProfile_usersNumberOfTokens_textView"
+        android:id="@+id/usersProfile_sendCancelFriendRequest_button"
+        android:text="Add friend"/>
+
+
+
+</RelativeLayout>
