--- a/Projekat/app/src/main/res/layout/activity_add_new_object_on_map.xml
+++ b/Projekat/app/src/main/res/layout/activity_add_new_object_on_map.xml
@@ -7,31 +7,15 @@
     android:background="@drawable/orange_gradient_top_down"
     tools:context=".AddNewObjectOnMapActivity">
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/imgBtn_goBackToMap"
-        android:src="@drawable/ic_baseline_arrow_back_24"/>
-
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/imgBtn_goBackToMap"
-        android:id="@+id/addNewObject_logOut"
-        android:src="@drawable/ic_baseline_logout_24"/>
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textSize="20dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="30dp"
         android:textAlignment="center"
         android:text="Add new object"
+        android:textStyle="bold"
         android:id="@+id/textView_addNewObject"
         android:textColor="@color/black"/>
 
