--- a/Projekat/app/src/main/res/layout/activity_maps.xml
+++ b/Projekat/app/src/main/res/layout/activity_maps.xml
@@ -15,27 +15,10 @@
         android:layout_height="match_parent"
         tools:context=".MapsActivity" />
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="30dp"
-        android:id="@+id/imageBtn_goBack"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/ic_baseline_arrow_back_24"/>
-
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="180dp"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/imageBtn_goBack"
-        android:id="@+id/imageBtn_logOut"
-        android:src="@drawable/ic_baseline_logout_24"/>
-
     <EditText
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:hint="Enter radius in km"
         android:id="@+id/editText_radius"/>
@@ -43,52 +26,57 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:text="Draw radius"
         android:layout_toRightOf="@+id/editText_radius"
         android:id="@+id/btn_radius"/>
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginLeft="25dp"
-        android:id="@+id/imageBtn_notifications"
-        android:src="@drawable/ic_baseline_person_pin_24"/>
-
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="500dp"
-        android:layout_toRightOf="@+id/imageBtn_notifications"
-        android:src="@drawable/ic_baseline_add_location_24"
-        android:id="@+id/imageBtn_addObject"
-        android:layout_marginLeft="30dp"/>
-
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="500dp"
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="400dp"
         android:layout_marginLeft="30dp"
-        android:layout_toRightOf="@+id/imageBtn_addObject"
-        android:id="@+id/imageBtn_showMyLocation"
-        android:src="@drawable/ic_baseline_my_location_24"/>
+        android:layout_below="@+id/editText_radius"
+        android:layout_centerHorizontal="true">
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginLeft="30dp"
-        android:layout_toRightOf="@+id/imageBtn_showMyLocation"
-        android:id="@+id/imageBtn_searchObjectsOnMap"
-        android:src="@drawable/ic_baseline_manage_search_24"/>
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/imageBtn_notifications"
+            android:src="@drawable/ic_baseline_person_pin_24"/>
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/imageBtn_notifications"
+            android:src="@drawable/ic_baseline_add_location_24"
+            android:id="@+id/imageBtn_addObject"/>
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/imageBtn_addObject"
+            android:id="@+id/imageBtn_showMyLocation"
+            android:src="@drawable/ic_baseline_my_location_24"/>
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/imageBtn_showMyLocation"
+            android:id="@+id/imageBtn_searchObjectsOnMap"
+            android:src="@drawable/ic_baseline_manage_search_24"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="150dp"
         android:layout_marginLeft="50dp"
         android:id="@+id/relativeLayout_searchPlace"
         android:layout_marginRight="50dp">
