--- a/Projekat/app/src/main/res/layout/activity_my_profile_info.xml
+++ b/Projekat/app/src/main/res/layout/activity_my_profile_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/orange_gradient_down_top"
+    android:background="@drawable/orange_gradient_top_down"
     tools:context=".MyProfileInfoActivity">
 
 
@@ -12,63 +12,52 @@
         android:id="@+id/profile_info_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="205dp"
+        android:layout_marginEnd="200dp"
         android:text="@string/profile_info_text"
         app:layout_constraintEnd_toStartOf="@+id/profile_friends_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@android:color/holo_orange_light"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/profile_friends_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="205dp"
+        android:layout_marginStart="200dp"
         android:text="@string/profile_friends_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/profile_info_button"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@android:color/holo_orange_light"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/profile_username"
-        android:layout_width="80dp"
-        android:layout_height="18dp"
+        android:layout_width="85dp"
+        android:layout_height="33dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:text="lejdidzu"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_info_button" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
     <ImageView
         android:id="@+id/profile_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="46dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_username"
+        app:layout_constraintTop_toBottomOf="@+id/profile_info_button"
         tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/profile_upload_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="12dp"
-        android:text="Upload photo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
     <TextView
         android:id="@+id/profile_first_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="35dp"
         android:text="Julija"
         app:layout_constraintStart_toEndOf="@+id/profile_first_name_fixed"
-        app:layout_constraintTop_toBottomOf="@+id/profile_upload_photo" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_username" />
 
     <TextView
         android:id="@+id/profile_last_name"
@@ -125,10 +114,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="35dp"
         android:text="@string/profile_first_name_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_upload_photo" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_username" />
 
     <TextView
         android:id="@+id/profile_last_name_fixed"
