--- a/Projekat/app/src/main/res/layout/activity_edit_my_profile_info.xml
+++ b/Projekat/app/src/main/res/layout/activity_edit_my_profile_info.xml
@@ -1,9 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/orange_gradient_top_down"
     tools:context=".EditMyProfileInfoActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/edit_profile_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/edit_profile_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/edit_profile_username"
+        android:layout_marginTop="50dp"
+        android:id="@+id/edit_username"
+        android:layout_marginHorizontal="30dp"
+        android:layout_below="@+id/edit_profile_button"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/edit_profile_first_name"
+        android:id="@+id/edit_firstname"
+        android:layout_marginHorizontal="30dp"
+        android:layout_below="@+id/edit_username"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/edit_profile_last_name"
+        android:id="@+id/edit_lastname"
+        android:layout_marginHorizontal="30dp"
+        android:layout_below="@+id/edit_firstname"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/edit_profile_phone"
+        android:id="@+id/edit_phone"
+        android:layout_marginHorizontal="30dp"
+        android:layout_below="@+id/edit_lastname"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/edit_profile_email"
+        android:id="@+id/edit_email"
+        android:layout_marginHorizontal="30dp"
+        android:layout_below="@+id/edit_phone"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/edit_profile_password"
+        android:id="@+id/edit_password"
+        android:layout_marginHorizontal="30dp"
+        android:layout_below="@+id/edit_email"/>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_below="@+id/edit_password">
+        <Button
+            android:id="@+id/edit_profile_finished_button"
+            android:layout_weight="1"
+            android:text="@string/edit_profile_finished"/>
+        <Button
+            android:id="@+id/edit_profile_cancel_button"
+            android:layout_weight="1"
+            android:text="@string/edit_profile_cancel" />
+    </TableRow>
+</RelativeLayout>
