--- a/Projekat/app/src/main/res/layout/activity_friends_profile.xml
+++ b/Projekat/app/src/main/res/layout/activity_friends_profile.xml
@@ -81,10 +81,10 @@
 
     <ImageView
         android:id="@+id/friends_profile_champ_image"
-        android:layout_width="58dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="33dp"
         app:layout_constraintStart_toEndOf="@+id/friends_profile_points"
         app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image"
         app:srcCompat="@drawable/ic_baseline_emoji_events_24" />
@@ -93,7 +93,7 @@
         android:id="@+id/friends_profile_points_fixed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="36dp"
         android:text="@string/profile_points_text"
         app:layout_constraintStart_toEndOf="@+id/friends_profile_username"
@@ -113,8 +113,8 @@
         android:id="@+id/friends_profile_checkbox"
         android:layout_width="90dp"
         android:layout_height="46dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="16dp"
         android:background="@color/white"
         android:checked="true"
         android:text="@string/friends_profile_check"
