rang lista, edit profile, sitno profile info

--- a/Projekat/app/src/main/res/drawable/orange_gradient_top_down.xml
+++ b/Projekat/app/src/main/res/drawable/orange_gradient_top_down.xml
@@ -7,7 +7,7 @@
                 android:angle="90"
                 android:type="linear"
                 android:startColor="#ffffff"
-                android:endColor="#eeb245"/>
+                android:endColor="#6600ff"/>
         </shape>
     </item>
 
