--- a/Projekat/app/src/main/res/layout/activity_edit_my_profile_info.xml
+++ b/Projekat/app/src/main/res/layout/activity_edit_my_profile_info.xml
@@ -73,10 +73,12 @@
         <Button
             android:id="@+id/edit_profile_finished_button"
             android:layout_weight="1"
-            android:text="@string/edit_profile_finished"/>
+            android:text="@string/edit_profile_finished"
+            android:layout_margin="7dp"/>
         <Button
             android:id="@+id/edit_profile_cancel_button"
             android:layout_weight="1"
-            android:text="@string/edit_profile_cancel" />
+            android:text="@string/edit_profile_cancel"
+            android:layout_margin="7dp"/>
     </TableRow>
 </RelativeLayout>
