--- a/Projekat/app/src/main/res/layout/activity_rang_list.xml
+++ b/Projekat/app/src/main/res/layout/activity_rang_list.xml
@@ -16,22 +16,38 @@
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="20dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/rangList_textView"
+            android:orientation="horizontal"
+            android:id="@+id/rangList_title"
             android:textAlignment="center"
-            android:textStyle="bold"
-            android:textSize="30dp"
-            android:text="Rang list"/>
+            android:layout_centerHorizontal="true">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="5dp"
+                app:srcCompat="@drawable/ic_outline_emoji_events_24" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/rangList_textView"
+                android:layout_marginStart="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:text="Rang list"
+                android:textColor="@android:color/white"/>
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_below="@+id/rangList_textView"
+            android:layout_below="@+id/rangList_title"
             android:id="@+id/recyclerViewRangList"/>
 
 
