--- a/Projekat/app/src/main/res/layout/rang_list_one_user_layout.xml
+++ b/Projekat/app/src/main/res/layout/rang_list_one_user_layout.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:background="@drawable/rang_rounded_corners"
         android:id="@+id/rangList_usersLinearLayout"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.mikhaellopez.circularimageview.CircularImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_margin="2dp"
-            android:id="@+id/rangList_usersImage_imageView"/>
+            android:id="@+id/rangList_usersImage_imageView"
+            app:civ_border_color="#FFFFFF"
+            app:civ_border_width="1dp"
+            app:civ_shadow="true"
+            app:civ_shadow_radius="5dp"
+            app:civ_shadow_color="#3f51b5"/>
 
         <LinearLayout
             android:layout_width="150dp"
