--- a/Projekat/app/src/main/res/layout/activity_my_profile_friends.xml
+++ b/Projekat/app/src/main/res/layout/activity_my_profile_friends.xml
@@ -41,8 +41,8 @@
 
     <ImageView
         android:id="@+id/profile_friends_search_button"
-        android:layout_width="56dp"
-        android:layout_height="46dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toEndOf="@+id/profile_friends_search_friends"
         app:layout_constraintTop_toBottomOf="@+id/profile_friends_info_button"
@@ -51,6 +51,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         app:layout_constraintTop_toBottomOf="@+id/profile_friends_search_button"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="20dp"
