--- a/Projekat/app/src/main/res/layout/my_profile_one_friend_layout.xml
+++ b/Projekat/app/src/main/res/layout/my_profile_one_friend_layout.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
+    android:layout_centerHorizontal="true"
     android:id="@+id/profile_friend_firstRelativeLayout">
 
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/profile_friend_profileImage"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_margin="2dp"
-        android:id="@+id/profile_friend_profileImage"/>
+        app:civ_border_color="#FFFFFF"
+        app:civ_border_width="1dp"
+        app:civ_shadow="true"
+        app:civ_shadow_color="#3f51b5"
+        app:civ_shadow_radius="5dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_toRightOf="@+id/profile_friend_profileImage"
         android:layout_marginLeft="10dp"
         android:textSize="20dp"
