--- a/Projekat/app/src/main/res/layout/rang_list_one_user_layout.xml
+++ b/Projekat/app/src/main/res/layout/rang_list_one_user_layout.xml
@@ -41,13 +41,8 @@
                 android:layout_margin="2dp"
                 android:id="@+id/rangList_usersUsername_textView"
                 android:textSize="15dp"
+                android:textStyle="bold"
                 android:textAlignment="center"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:id="@+id/rangList_usersId_textView"/>
 
         </LinearLayout>
 
@@ -62,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:textAlignment="center"
+                android:textStyle="bold"
                 android:id="@+id/rangList_numberOfUsersTokens_textView"
                 android:textSize="15dp"/>
 
@@ -71,11 +67,18 @@
                 android:id="@+id/rangList_textTokens_textView"
                 android:textSize="15dp"
                 android:text="tokens"
+                android:textStyle="bold"
                 android:layout_margin="2dp"/>
 
         </LinearLayout>
 
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:id="@+id/rangList_usersId_textView"/>
 
 </RelativeLayout>
